fixed duplicated name for build info

--- a/templates/yann/maven/templateDefinition.yml
+++ b/templates/yann/maven/templateDefinition.yml
@@ -18,7 +18,7 @@ resources:
       buildName: {{ .Values.BuildInfoMvn.name | default "BuildInfoMvn" }}
       buildNumber: ${run_number}
 
-  - name: {{ .Values.BuildInfoMvn.resourceName | default "bi_backapp_mvn_promoted_staging" }} 
+  - name: {{ .Values.BuildInfoMvnPromoted.resourceName | default "bi_backapp_mvn_promoted_staging" }} 
     type: BuildInfo
     configuration:
       sourceArtifactory: {{ .Values.ArtifactoryIntegration }}
