--- a/templates/yann/maven/templateDefinition.yml
+++ b/templates/yann/maven/templateDefinition.yml
@@ -86,20 +86,19 @@ pipelines:
             - name: {{ .Values.ArtifactoryIntegration }}
         execution:
           onStart:
-              - echo {{ .Values.BuildInfoMvn.resourceName }}
-              - echo "${res_{{ .Values.BuildInfoMvn.resourceName }}_resourcePath}"
-              - echo "${int_{{ .Values.ArtifactoryIntegration }}_url/%artifactory/ui}/pipelines/myPipelines/${pipeline_name}/${run_number}/build_${pipeline_name}?branch=${res_{{ .Values.GitRepoMvn.name }}_branchName}"
-#             - export JFROG_CLI_BUILD_URL="${int_artifactory_eu_url/%artifactory/ui}/pipelines/myPipelines/${pipeline_name}/${run_number}/build_${pipeline_name}?branch=${res_src_code_backapp_mvn_branchName}"
-#             - cd ${res_src_code_backapp_mvn_resourcePath}/complete/CI/jfrog
-#             - ls -l && chmod +x init_mvn.sh
-#             - ./init_mvn.sh -u  ${int_artifactory_eu_url/%artifactory/} -p ${int_artifactory_eu_apikey} -e "${envVarEdgeUrl}"
-#           onSuccess:
-# #            - add_run_variables myAppVersion=`if [[ ${res_src_code_backapp_mvn_isGitTag} == "True" ]]; then echo ${res_src_code_backapp_mvn_gitTagName}; else echo ${myDemoVersion}; fi` 
-#             - add_run_variables runVarAppVersion=`sed -n "s/[[:space:]]*<version>\(.*\)<\/version>/\1/p" ${res_src_code_backapp_mvn_resourcePath}/complete/pom.xml `
-#             - add_run_variables runVarGitCommit=${res_src_code_backapp_mvn_commitSha}
-#             - echo $runVarAppVersion
-#             - echo $runVarGitCommit
-#             - jfrog rt sp --build=${res_bi_backapp_mvn_buildName}/${run_number} --exclusions="*.pom;*library*" ${envVarMvnPromoteRepo}/ "src.commit.sha=${runVarGitCommit};app.version=${runVarAppVersion};app.name=ninja"
+            #   - echo {{ .Values.BuildInfoMvn.resourceName }}
+            #   - echo "${res_{{ .Values.BuildInfoMvn.resourceName }}_resourcePath}"
+            #   - echo "${int_{{ .Values.ArtifactoryIntegration }}_url/%artifactory/ui}/pipelines/myPipelines/${pipeline_name}/${run_number}/build_${pipeline_name}?branch=${res_{{ .Values.GitRepoMvn.name }}_branchName}"
+            # - export JFROG_CLI_BUILD_URL="${int_artifactory_eu_url/%artifactory/ui}/pipelines/myPipelines/${pipeline_name}/${run_number}/build_${pipeline_name}?branch=${res_src_code_backapp_mvn_branchName}"
+            - cd ${res_{{ .Values.GitRepoMvn.name }}_resourcePath}/complete/CI/jfrog
+            - ls -l && chmod +x init_mvn.sh
+            - ./init_mvn.sh -u  ${int_{{ .Values.ArtifactoryIntegration }}_url/%artifactory/} -p ${int_{{ .Values.ArtifactoryIntegration }}_apikey} -e "{{ .Values.EdgeUrl }}" -i {{ .Values.ArtifactoryIntegration }} -v {{ .Values.MvnRepo }}
+          onSuccess:
+            - add_run_variables runVarAppVersion=`sed -n "s/[[:space:]]*<version>\(.*\)<\/version>/\1/p" ${res_{{ .Values.GitRepoMvn.name }}_resourcePath}/complete/pom.xml `
+            - add_run_variables runVarGitCommit=${res_{{ .Values.GitRepoMvn.name }}_commitSha}
+            - echo $runVarAppVersion
+            - echo $runVarGitCommit
+            - jfrog rt sp --build=${res_{{ .Values.BuildInfoMvn.resourceName }}_buildName}/${run_number} --exclusions="*.pom;*library*" {{ .Values.MvnRepo }}/ "src.commit.sha=${runVarGitCommit};app.version=${runVarAppVersion};app.name=ninja"
                 
       - name: {{ .Values.XrayMvnStepName }}
         type: XrayScan
