--- a/templates/yann/maven/values.yml.example
+++ b/templates/yann/maven/values.yml.example
@@ -71,9 +71,17 @@ GitRepoContainer:
   files:
     include: '^complete\/CI\/Docker\/.+'
 
+OCIBuild:
+  stepName: backapp_mvn_oci
+  dockerFileName: Dockerfile
+  dockerFileLocation: complete/CI/Docker/
+  imageName: ninja-docker.artifactory-eu-yannc4-0.soleng-emea-staging.jfrog.team/backapp-mvn
+  pushImage: true
+  artifactoryTargetRepoName: ninja-docker
+
 BuildInfoContainer:
-  resourceName: bi_backapp_mvn_docker
-  name: backapp_mvn_docker
+  resourceName: bi_backapp_mvn_oci
+  name: backapp_mvn_oci
   autoPublishBuildInfo: true
 
 BuildInfoContainerPromoted:
