--- a/templates/yann/maven/templateDefinition.yml
+++ b/templates/yann/maven/templateDefinition.yml
@@ -58,7 +58,8 @@ resources:
     type: FileSpec
     configuration:
       sourceArtifactory: {{ .Values.ArtifactoryIntegration }}
-      pattern: "{{ .Values.MvnPromoteRepo }}/**/{{ .Values.FileSpecMvn.appName }}-${res_{{ .Values.PropertyBagContainer }}_appVersion}.jar"
+      pattern: "{{ .Values.MvnPromoteRepo }}/**/{{ .Values.FileSpecMvn.appName }}-${runVarAppVersion}.jar"
+#      pattern: "{{ .Values.MvnPromoteRepo }}/**/{{ .Values.FileSpecMvn.appName }}-${res_{{ .Values.PropertyBagContainer }}_appVersion}.jar"
       flat: {{ .Values.FileSpecMvn.flat | default true }}
 
   - name: {{ .Values.PropertyBagContainer | default "pb_backapp_mvn_docker" }}  
@@ -131,32 +132,32 @@ pipelines:
             - write_output {{ .Values.PropertyBagMvn }} biNumber=${res_{{ .Values.BuildInfoMvn.resourceName }}_buildNumber}
 
   - name: {{ .Values.Pipeline.mvnContainerName }} 
-    configuration:
-      environmentVariables:
-        readOnly:
-          envVarDockerRepoUrl: ninja-dev-docker.artifactory-eu-yannc4-0.soleng-emea-staging.jfrog.team:80
-          envVarDockerPushRepo: ninja-dev-docker
-#          envVarDockerImageName: yannaws-ninja-dev-docker.jfrog.io/backapp-mvn
-          envVarDockerImageName: ${envVarDockerRepoUrl}/backapp-mvn
-          envVarDockerPromoteRepo: ninja-rc-docker-local
+#     configuration:
+#       environmentVariables:
+#         readOnly:
+#           envVarDockerRepoUrl: ninja-dev-docker.artifactory-eu-yannc4-0.soleng-emea-staging.jfrog.team:80
+#           envVarDockerPushRepo: ninja-dev-docker
+# #          envVarDockerImageName: yannaws-ninja-dev-docker.jfrog.io/backapp-mvn
+#           envVarDockerImageName: ${envVarDockerRepoUrl}/backapp-mvn
+#           envVarDockerPromoteRepo: ninja-rc-docker-local
     steps:
-      # - name: setup_env
-      #   type: Bash
-      #   configuration:
-      #     affinityGroup: together
-      #     runtime:
-      #       type: host
-      #     inputResources:
-      #       - name: {{ .Values.PropertyBagMvn }}
-      #   execution:
-      #     onExecute:
+      - name: setup_env
+        type: Bash
+        configuration:
+          affinityGroup: together
+          runtime:
+            type: host
+          inputResources:
+            - name: {{ .Values.PropertyBagMvn }}
+        execution:
+          onExecute:
       #       - sudo mkdir -p /etc/docker 
       #       - > 
       #         sudo jq -n  "{\"insecure-registries\": [\"${envVarDockerRepoUrl}\"]}" > /etc/docker/daemon.json
       #       - sudo systemctl restart docker
       #       - sudo cat /etc/docker/daemon.json
-      #       - add_run_variables runVarAppVersion=${res_{{ .Values.PropertyBagMvn }}_appVersion}
-      #       - add_run_variables runVarAppCommitSHA=${res_{{ .Values.PropertyBagMvn }}_appCommitSHA}
+            - add_run_variables runVarAppVersion=${res_{{ .Values.PropertyBagMvn }}_appVersion}
+            - add_run_variables runVarAppCommitSHA=${res_{{ .Values.PropertyBagMvn }}_appCommitSHA}
       - name: {{ .Values.OCIBuild.stepName | default "backapp_mvn_oci" }} 
         type: oci/PodmanBuild
         configuration:
@@ -175,14 +176,15 @@ pipelines:
           buildNumber: ${res_{{ .Values.BuildInfoContainer.resourceName }}_buildNumber} 
           buildDependency: ${res_{{ .Values.BuildInfoContainer.resourceName }}_pattern}
           inputResources:
-            - name: {{ .Values.PropertyBagMvn }}
-            - name: {{ .Values.FileSpecMvn.name }}
+            - name: {{ .Values.GitRepoContainer.name }} 
+          inputSteps:
+            - name: setup_env
           integrations:
             - name: {{ .Values.ArtifactoryIntegration }}
         execution:
           onStart:
-            - add_run_variables runVarAppVersion=${res_{{ .Values.PropertyBagMvn }}_appVersion}
-            - add_run_variables runVarAppCommitSHA=${res_{{ .Values.PropertyBagMvn }}_appCommitSHA}    
+            # - add_run_variables runVarAppVersion=${res_{{ .Values.PropertyBagMvn }}_appVersion}
+            # - add_run_variables runVarAppCommitSHA=${res_{{ .Values.PropertyBagMvn }}_appCommitSHA}    
             - ls -la ${res_{{ .Values.FileSpecMvn.name }}_resourcePath}
             - echo ${res_{{ .Values.GitRepoContainer.name }}_resourcePath}
             - ls -la  ${res_{{ .Values.GitRepoContainer.name }}_resourcePath}
