fixed docker file location

--- a/templates/yann/maven/templateDefinition.yml
+++ b/templates/yann/maven/templateDefinition.yml
@@ -167,7 +167,7 @@ pipelines:
           runtime:
             type: host
           dockerFileName: {{ .Values.OCIBuild.dockerFileName }}
-          dockerFileLocation: {{ .Values.OCIBuild.dockerFileName }}
+          dockerFileLocation: {{ .Values.OCIBuild.dockerFileLocation }}
           ociImageName: {{ .Values.OCIBuild.imageName }}
           ociImageTag: ${runVarAppVersion}
           pushImage: {{ .Values.OCIBuild.pushImage }}
