--- a/templates/yann/maven/values.yml.example
+++ b/templates/yann/maven/values.yml.example
@@ -77,21 +77,27 @@ OCIBuild:
   dockerFileLocation: complete/CI/Docker/
   imageName: ninja-docker.artifactory-eu-yannc4-0.soleng-emea-staging.jfrog.team/backapp-mvn
   pushImage: true
-  artifactoryTargetRepoName: ninja-docker
+  artifactoryTargetRepoName: ninja-dev-docker-local
 
 BuildInfoContainer:
   resourceName: bi_backapp_mvn_oci
   name: backapp_mvn_oci
-  autoPublishBuildInfo: true
+#  autoPublishBuildInfo: true
 
-BuildInfoContainerPromoted:
-  resourceName: bi_backapp_mvn_docker_promoted_staging
+BuildInfoContainerPromotion:
+  resourceName: bi_backapp_mvn_oci_promoted
+  stepName: promote_bi_backapp_mvn_docker
+  includeDependencies: false
+  status: SANDBOX_OK
+  comment: passed my test succesfully
+  copy: false
+  mvnPromoteRepo: ninja-rc-docker-local
 
 FileSpecMvn:
   name: fs_backapp_mvn
   appName: multi-module-application 
   flat: true
 
-PropertyBagContainer: pb_backapp_mvn_docker
+PropertyBagContainer: pb_backapp_mvn_oci
 
-XrayMvnContainerStepName: scan_backapp_mvn_docker
+#XrayMvnContainerStepName: scan_backapp_mvn_docker
