fixed property bag name in mvn pipeline

--- a/templates/yann/maven/templateDefinition.yml
+++ b/templates/yann/maven/templateDefinition.yml
@@ -120,7 +120,7 @@ pipelines:
           inputSteps:
             - name: {{ .Values.XrayMvnStepName }}
           outputResources:
-            - name: {{ .Values.PropertyBagContainer }}            
+            - name: {{ .Values.PropertyBagMvn }}            
             - name: {{ .Values.BuildInfoMvnPromotion.resourceName }}
         execution:  
           onStart:
