--- a/templates/yann/maven/templateDefinition.yml
+++ b/templates/yann/maven/templateDefinition.yml
@@ -166,7 +166,8 @@ pipelines:
           pushImage: {{ .Values.OCIBuild.pushImage }}
           artifactoryTargetRepoName: {{ .Values.OCIBuild.artifactoryTargetRepoName }}
           buildName: "${res_{{ .Values.BuildInfoContainer.resourceName }}_buildName}"
-          buildNumber: ${res_{{ .Values.BuildInfoContainer.resourceName }}_buildNumber} 
+          buildNumber: ${runVarBINumber}
+          #         buildNumber: ${res_{{ .Values.BuildInfoContainer.resourceName }}_buildNumber} 
           buildDependency: ${res_{{ .Values.BuildInfoContainer.resourceName }}_pattern}
           inputResources:
             - name: {{ .Values.GitRepoContainer.name }} 
@@ -190,7 +191,7 @@ pipelines:
           onSuccess:
             - echo "{{ .Values.OCIBuild.artifactoryTargetRepoName }}/backapp-mvn/${runVarAppVersion}/manifest.json"
             - jfrog rt sp --build=${res_{{ .Values.BuildInfoContainer.resourceName }}_buildName}/${run_number} {{ .Values.OCIBuild.artifactoryTargetRepoName }}/backapp-mvn/${runVarAppVersion}/manifest.json "app.version=${runVarAppVersion};app.commit.sha=${runVarAppCommitSHA};dockerfile.commit.sha=${runVarGitCommit}"
-            - write_output {{ .Values.BuildInfoContainer.resourceName }} configuration.buildNumber=${runVarAppVersion}
+            - write_output {{ .Values.BuildInfoContainer.resourceName }} configuration.buildNumber=${runVarBINumber}
 
       - name: {{ .Values.BuildInfoContainerPromotion.resourceName }}
         type: PromoteBuild
